[gd_scene load_steps=3 format=3 uid="uid://d28ovobcyqi0r"]

[ext_resource type="Script" uid="uid://djq6l7nhpikkj" path="res://scenes/pioneer_card.gd" id="1_cqpqd"]
[ext_resource type="Texture2D" uid="uid://cj3huigs4maej" path="res://icon.svg" id="2_ji7lf"]

[node name="PioneerCard" type="MarginContainer"]
custom_minimum_size = Vector2(180, 240)
offset_right = 152.0
offset_bottom = 240.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_cqpqd")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(164, 224)
layout_mode = 2
color = Color(0.34166238, 0.16887546, 0.29329547, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=24][center]PIONEER"
fit_content = true
scroll_active = false

[node name="PioneerPic" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("2_ji7lf")
expand_mode = 1

[node name="InfoLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[center][font_size=24]PEARL
PLACEHOLDER
[font_size=16]Female
Class: PLACEHOLDER
STR 15
DEX 15 INT 15
"
fit_content = true
scroll_active = false

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="mouse_entered" from="ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
